[package]
name = "ipcount"
version = "0.1.0"
edition = "2021"
author = "statiolake"
description = "count IP addresses within a CIDR range, or make CIDR from a list of addresses"
license = "MIT"

[[bin]]
name = "ipunite"
path = "src/bin/ipunite.rs"

[dependencies]
anyhow = "1.0.86"
itertools = "0.13.0"
